# anisotropy

./: AnisotropyConfig.cmake.in  CMakeLists.txt
examples/SimpleCube/: beam.py  cube_optimization_test.py  cube_test.py
examples/SimpleCube/mechaParam/: anisotropyTransverse.yaml
examples/SimpleCube/mesh/: beam_150-15-15.msh
examples/Tripod/: homogenized_value.py
examples/Tripod/details/: elasticbody.py  step5.py  step5.py.qglviewer.view
examples/Tripod/direct_simu/: cube_test.py  direct_simu.py  direct_simu.py.qglviewer.view  homogenized_value.py  step5_test.pyscn  tripodRestPosition.json
examples/Tripod/direct_simu/utility/: actuatedarm.py  s90servo.py  tripod_HighOrder.py  tripodcontroller.py  tutorial.py
examples/Tripod/inverse_simu/: inverse_simu.pyscn  inverse_simu.pyscn.qglviewer.view  output.out
examples/Tripod/inverse_simu/old/: mechanical_param.py  untitled.geo
examples/Tripod/inverse_simu/old/trajectory/: custom.brep  custom.stl  ellipsoid_20_40_20.brep  ellipsoid_20_40_20.stl  force_ratio.py  global_workspace_exploration.brep  global_workspace_exploration.stl  goal_trajectory.txt  pos.txt  sphere.stl  trajectory_generator.py  workspace.FCStd  workspace.FCStd1
examples/Tripod/inverse_simu/utility/: actuatedarm.py  s90servo.py  tripod.py  tripodcontroller.py
examples/Tripod/mesh/: collision_arm.stl  collision_arm_little.stl  tripod.geo_unrolled  tripod_arm_collision.stl  tripod_coarse_04.vtk  tripod_whole_collision.stl
examples/Tripod/mesh/old/: tripod.brep  tripod.geo.opt  tripod.stl  tripod_coarse_04.geo  tripod_coarse_04.stl  tripod_coarse_04_centered.stl  tripod_coarse_04_centered.vtk  tripod_test.geo_unrolled
examples/Tripod/utility/: highOrderShape.py  rigidification.py  spiralTripod.py
src/Anisotropy/: TetrahedronAnisotropicForceField.cpp  TetrahedronAnisotropicForceField.h  TetrahedronAnisotropicForceField.inl  anisotropicCorotationalForceField.h  anisotropicForceField.cpp  anisotropicForceField.h  anisotropicForceField.inl  config.h.in  initAnisotropy.cpp
src/Anisotropy/component/: initAnisotropy.cpp
src/Anisotropy/component/constraint/: AnisotropyControlPointActuator.cpp  AnisotropyControlPointActuator.h  AnisotropyControlPointActuator.inl
src/Anisotropy/component/forcefield/: TetrahedronAnisotropicForceField.cpp  TetrahedronAnisotropicForceField.h  TetrahedronAnisotropicForceField.inl
